--- a/src/pages/StandardAPIMapping/index.module.scss
+++ b/src/pages/StandardAPIMapping/index.module.scss
@@ -7,7 +7,7 @@
   overflow-y: hidden;
 }
 .pageBody {
-  max-height: calc(100vh - 128px);
+  max-height: calc(100vh - 156px);
 }
 
 .leftWrapper {
